# loop-graph

./: .gitignore  README.md  app.py  app_cytoscape.py  app_img.py  package-lock.json  pyproject.toml  visualize.py
app/: README.md  index.html  package-lock.json  package.json  test.jsx
app/public/: path_curved.csv  path_simple.csv  sample_nodes.csv
app/src/: backend.py  generate_dxf.py  main.jsx  main_modified.jsx  main_tmp.jsx  main_tmp2.jsx  main_tmp3.jsx  main_with_fit copy.jsx  main_with_fit.jsx  mainbkp.jsx  mainfit1.jsx  resolved.jsx  styles.css  test_conveyor.dxf
data/: jsonex1.json  jsonex2.json  jsonex3.json  output_be.tif  path_simple.json  path_simple.xls  path_simple.xlsx  sample.json  test1.json  test_conveyor.dxf
examples/: quickstart.py
src/loop_graph/: __init__.py  geometry.py
tests/: test_geometry.py
