[project]
name = "loop-graph"
version = "0.1.0"
description = "Closed-loop path graph with incidence matrix, edge geometry, and node-link export"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/loop_graph"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
